# simplePIPE

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  USAGE_GUIDE.md  append_log.py  dump.patch  patch_main.py  patch_viewmanager.py  patch_viewport.py  pixi.toml  test_qt.cpp  update_status.py  工业软件研发Skill.md
src/: CMakeLists.txt  main.cpp
src/app/: AnalysisWorkbench.cpp  AnalysisWorkbench.h  Application.cpp  Application.h  CMakeLists.txt  CadWorkbench.cpp  CadWorkbench.h  DependencyGraph.cpp  DependencyGraph.h  DesignWorkbench.cpp  DesignWorkbench.h  Document.cpp  Document.h  ProjectSerializer.cpp  ProjectSerializer.h  SelectionManager.cpp  SelectionManager.h  SpecWorkbench.cpp  SpecWorkbench.h  StepExporter.cpp  StepExporter.h  TransactionManager.cpp  TransactionManager.h  Workbench.h  WorkbenchManager.cpp  WorkbenchManager.h  placeholder.cpp
src/apps/: CMakeLists.txt
src/apps/pipecad/: CMakeLists.txt  main.cpp  placeholder.cpp
src/apps/pipecad/engine/: AccessoryBuilder.cpp  AccessoryBuilder.h  BeamBuilder.h  BendCalculator.h  CMakeLists.txt  ComponentCatalog.cpp  ComponentTemplate.h  ConstraintSolver.cpp  FlexJointBuilder.cpp  FlexJointBuilder.h  GeometryDeriver.cpp  GeometryDeriver.h  RecomputeEngine.cpp  RecomputeEngine.h  ReducerBuilder.cpp  TeeBuilder.cpp  TeeBuilder.h  ValveBuilder.cpp  ValveBuilder.h  placeholder.cpp
src/apps/pipecad/model/: CMakeLists.txt  ContainerObject.h  DeadWeightLoad.h  DocumentObject.h  FixedPoint.h  Flange.h  Load.h  PipeSpec.h  PressureLoad.h  PropertyObject.h  Route.h  SeismicLoad.h  SpatialObject.h  Support.h  ThermalLoad.h  placeholder.cpp
src/apps/pipecad/resources/: CMakeLists.txt  README.md
src/apps/pipecad/ui/: AppController.cpp  CMakeLists.txt  PipePointTableModel.cpp  PipePointTableModel.h  PipeSpecModel.h  PropertyModel.h  SegmentTreeModel.cpp  VsgQuickItem.cpp  VsgQuickItem.h  WorkbenchController.cpp  WorkbenchController.h  placeholder.cpp
src/apps/pipecad/workbench/: CMakeLists.txt  placeholder.cpp
src/command/: CMakeLists.txt  CommandContext.h  CommandRegistry.cpp  CommandResult.h  CommandStack.cpp  CommandStack.h  CreatePipePointCommand.cpp  DeletePipePointCommand.h  PropertyApplier.h  SetPropertyCommand.cpp
src/engine/: AccessoryBuilder.cpp  AccessoryBuilder.h  BeamBuilder.cpp  BeamBuilder.h  BendBuilder.cpp  BendBuilder.h  BendCalculator.cpp  BendCalculator.h  CMakeLists.txt  ComponentCatalog.cpp  ComponentCatalog.h  ComponentTemplate.h  ConstraintSolver.cpp  ConstraintSolver.h  FlexJointBuilder.cpp  FlexJointBuilder.h  GeometryDeriver.cpp  GeometryDeriver.h  PipelineValidator.cpp  PipelineValidator.h  RecomputeEngine.cpp  RecomputeEngine.h  ReducerBuilder.cpp  ReducerBuilder.h  RunBuilder.cpp  RunBuilder.h  TeeBuilder.cpp  TeeBuilder.h  TopologyManager.cpp  TopologyManager.h  ValveBuilder.cpp  ValveBuilder.h  placeholder.cpp
src/engine/templates/: ElbowTemplate.h  GateValveTemplate.h  PipeTemplate.h  ReducerTemplate.h  RigidSupportTemplate.h  SpringHangerTemplate.h  TeeTemplate.h  WeldNeckFlangeTemplate.h
src/foundation/: CMakeLists.txt  Log.h  Math.h  Signal.h  Types.h  placeholder.cpp
src/geometry/: BooleanOps.cpp  BooleanOps.h  CMakeLists.txt  OcctTypes.h  ShapeBuilder.cpp  ShapeBuilder.h  ShapeMesher.cpp  ShapeMesher.h  ShapeProperties.cpp  ShapeProperties.h  ShapeTransform.cpp  ShapeTransform.h  StepIO.cpp  StepIO.h  placeholder.cpp
src/lib/: CMakeLists.txt
src/lib/base/: CMakeLists.txt
src/lib/base/baseMod/: pipecad.base.cppm  pipecad.base.math.cppm  pipecad.base.types.cppm
src/lib/base/foundation/: Log.h  Math.h  Signal.h  Types.h
src/lib/framework/: CMakeLists.txt
src/lib/framework/app/: AnalysisWorkbench.cpp  AnalysisWorkbench.h  (+7 more)
src/lib/platform/: CMakeLists.txt
src/lib/runtime/: CMakeLists.txt
src/model/: Accessory.h  Beam.h  CMakeLists.txt  ContainerObject.h  DeadWeightLoad.h  DisplacementLoad.h  DocumentObject.h  FixedPoint.h  Flange.h  Gasket.h  Load.h  LoadCase.h  LoadCombination.h  PipePoint.h  PipeSpec.h  PressureLoad.h  ProjectConfig.h  PropertyObject.h  Route.h  SealRing.h  Segment.h  SeismicLoad.h  SpatialObject.h  Support.h  ThermalLoad.h  UserDefinedLoad.h  WindLoad.h  placeholder.cpp
src/ui/: AppController.cpp  AppController.h  CMakeLists.txt  PipePointTableModel.cpp  PipePointTableModel.h  PipeSpecModel.cpp  PipeSpecModel.h  PropertyModel.cpp  PropertyModel.h  SegmentTreeModel.cpp  SegmentTreeModel.h  UuidUtil.h  VsgQuickItem.cpp  VsgQuickItem.h  WorkbenchController.cpp  WorkbenchController.h  placeholder.cpp
src/visualization/: CMakeLists.txt  CameraController.cpp  CameraController.h  ComponentNode.cpp  ComponentNode.h  LodStrategy.cpp  LodStrategy.h  OcctToVsg.cpp  OcctToVsg.h  PickHandler.cpp  PickHandler.h  PipePointNode.cpp  PipePointNode.h  SceneFurniture.cpp  SceneFurniture.h  SceneManager.cpp  SceneManager.h  SelectionHighlight.cpp  SelectionHighlight.h  ViewManager.cpp  ViewManager.h  placeholder.cpp
src/vtk-visualization/: BeamMeshBuilder.cpp  BeamMeshBuilder.h  CMakeLists.txt  OcctToVtk.cpp  OcctToVtk.h  VtkSceneManager.cpp  VtkSceneManager.h  VtkViewport.cpp  VtkViewport.h
tests/: CMakeLists.txt  test_accessory_beam.cpp  test_analysis_workbench.cpp  test_app_core.cpp  test_async_recompute.cpp  test_batch_mesh.cpp  test_build_system.cpp  test_camera_furniture.cpp  test_command_base.cpp  test_command_registry.cpp  test_command_stack.cpp  test_component_catalog.cpp  test_concurrent_recompute.cpp  test_design_workbench.cpp  test_engine.cpp  test_foundation.cpp  test_geometry.cpp  test_insert_component.cpp  test_integration.cpp  test_load_model.cpp  test_load_save_async.cpp  test_load_serialization.cpp  test_loadcase.cpp  test_mesh_step.cpp  test_model.cpp  test_occt_to_vtk.cpp  test_phase2_integration.cpp  test_pick_highlight.cpp  test_pipe_geometry.cpp  test_project_serializer.cpp  test_property_commands.cpp  test_qml_models.cpp  test_qml_ui_panels.cpp  test_runtime_tasking.cpp  test_scene_manager.cpp  test_spec_workbench.cpp  test_step_exporter.cpp  test_structural_commands.cpp  test_topology.cpp  test_valve_flex_beam.cpp  (+7 more)
(+150 files in other folders)
